--- a/package.json
+++ b/package.json
@@ -9,8 +9,10 @@
     "axios": "^0.21.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-hook-form": "^7.12.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
+    "sweetalert2": "^11.1.2",
     "web-vitals": "^1.0.1"
   },
   "scripts": {
